# biocpd

./: MANIFEST.in  README.md  TUTORIAL.md  __init__.py  auroc.py  metrics.py  pyproject.toml
src/: analysis.py  utils.py  visual.py
